--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1px" style="background-color:yellow">
+	<caption>Student Details</caption>
+	<table style="background-color:yellow">
 		<tr>
 			<th>NAME</th>
 			<th>AGE</th>
