--- a/main.html
+++ b/main.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+<style>
+  table {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: yellow;
+    border: 1px solid black;
+  }
+  
+  th, td {
+    border: 1px solid black;
+    padding: 8px;
+    text-align: center;
+  }
+  
+  th {
+    background-color: #f2f2f2;
+  }
+  
+  caption {
+    font-weight: bold;
+    margin-bottom: 10px;
+  }
+</style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-	<caption>Student Details</caption>
-	<table style="background-color:yellow">
-		<tr>
-			<th>NAME</th>
-			<th>AGE</th>
-			<th>BRANCH</th>
-		</tr>
-		<tr>
-			<td>Shaw</td>
-			<td>20</td>
-			<td>CSE</td>
-		</tr>
-				<tr>
-			<td>Adil</td>
-			<td>21</td>
-			<td>ECE</td>
-		</tr>
-	</table>
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<table>
+  <caption>Student Details</caption>
+  <tr>
+    <th>NAME</th>
+    <th>AGE</th>
+    <th>BRANCH</th>
+  </tr>
+  <tr>
+    <td>John Doe</td>
+    <td>20</td>
+    <td>Computer Science</td>
+  </tr>
+  <tr>
+    <td>Jane Smith</td>
+    <td>22</td>
+    <td>Electrical Engineering</td>
+  </tr>
+  <tr>
+    <td>Michael Johnson</td>
+    <td>21</td>
+    <td>Mechanical Engineering</td>
+  </tr>
+</table>
 
 </body>
-
 </html>
